Update pbs item mapping and stock routes with pharmacy manager page changes
